--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey_dark">#424242</color>
+    <color name="grey">#9D9D9D</color>
+    <color name="primary">#A2B2FC</color>
+
 </resources>
