--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,3 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--Text-->
+<style name="Text">
+    <item name="android:fontFamily">@font/ubuntu_regular</item>
+    <item name="android:textColor">@color/grey_dark</item>
+</style>
+    <style name="Text.H1">
+        <item name="android:textSize">36sp</item>
+    </style>
+    <style name="Text.H5">
+        <item name="android:textSize">16sp</item>
+    </style>
+    <style name="Text.H5.Light">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/grey</item>
+    </style>
+    <style name="Text.H5.White">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <!--EditText-->
+    <style name="TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorOnSurface">@color/white</item>
+        <item name="boxStrokeColor">@color/white</item>
+        <item name="boxStrokeWidth">1dp</item>
+        <item name="boxStrokeWidthFocused">1dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColorHint">@color/white</item>
+        <item name="startIconTint">@color/black</item>
+        <item name="hintEnabled">false</item>
+        <item name="android:focusableInTouchMode">true</item>
+        <item name="android:focusable">true</item>
+        <item name="errorTextColor">@color/white</item>
+        <item name="errorIconTint">@color/black</item>
+    </style>
+
+    <style name="TextAppearance.Hint" parent="TextAppearance.Design.Hint">
+        <item name="hintTextColor">@color/white</item>
+        <item name="android:textColorHint">@color/white</item>
+    </style>
+    <style name="TextInputEditText" parent="Widget.AppCompat.EditText">
+        <item name="android:textAppearance">@style/Text.H5.White</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:inputType">textNoSuggestions</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:maxLength">50</item>
+        <item name="android:textColorHint">@color/white</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
