--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,39 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--Text-->
-<style name="Text">
-    <item name="android:fontFamily">@font/ubuntu_regular</item>
-    <item name="android:textColor">@color/grey_dark</item>
-</style>
+    <style name="Text">
+        <item name="android:fontFamily">@font/ubuntu_regular</item>
+        <item name="android:textColor">@color/grey_dark</item>
+    </style>
+
     <style name="Text.H1">
         <item name="android:textSize">36sp</item>
     </style>
+
     <style name="Text.H5">
         <item name="android:textSize">16sp</item>
     </style>
+
     <style name="Text.H5.Light">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/grey</item>
     </style>
+
     <style name="Text.H5.White">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/white</item>
     </style>
     <!--EditText-->
     <style name="TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
-        <item name="colorPrimary">@color/white</item>
-        <item name="colorOnSurface">@color/white</item>
-        <item name="boxStrokeColor">@color/white</item>
+        <item name="colorPrimary">@color/grey_dark</item>
+        <item name="colorOnSurface">@color/grey_dark</item>
+        <item name="boxStrokeColor">@color/grey_dark</item>
         <item name="boxStrokeWidth">1dp</item>
         <item name="boxStrokeWidthFocused">1dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColorHint">@color/white</item>
+        <item name="android:textColorHint">@color/grey_dark</item>
         <item name="startIconTint">@color/black</item>
         <item name="hintEnabled">false</item>
+        <item name="android:fontFamily">@font/ubuntu_regular</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:focusableInTouchMode">true</item>
         <item name="android:focusable">true</item>
-        <item name="errorTextColor">@color/white</item>
+        <item name="errorTextColor">@color/black</item>
         <item name="errorIconTint">@color/black</item>
     </style>
 
@@ -41,15 +47,41 @@
         <item name="hintTextColor">@color/white</item>
         <item name="android:textColorHint">@color/white</item>
     </style>
+
     <style name="TextInputEditText" parent="Widget.AppCompat.EditText">
-        <item name="android:textAppearance">@style/Text.H5.White</item>
         <item name="android:background">@android:color/transparent</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:inputType">textNoSuggestions</item>
         <item name="android:singleLine">true</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:maxLength">50</item>
-        <item name="android:textColorHint">@color/white</item>
+        <item name="android:fontFamily">@font/ubuntu_regular</item>
+        <item name="android:textColorHint">@color/grey</item>
+        <item name="android:textColor">@color/grey</item>
+    </style>
+    <!--Buttons -->
+    <style name="ButtonRounded" parent="Widget.Material3.Button">
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:textAppearance">@style/Text.H5.White</item>
+        <item name="cornerRadius">20dp</item>
+        <item name="android:layout_marginStart">48dp</item>
+        <item name="android:layout_marginEnd">48dp</item>
+    </style>
+
+    <style name="TransparentButton">
+        <item name="android:textAppearanceButton">@style/Text.H5.Light</item>
+        <item name="android:textColor">@color/grey</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:backgroundTint">@android:color/transparent</item>
+        <item name="android:stateListAnimator">@null</item>
+    </style>
+
+    <style name="TransparentButton.Light" parent="TransparentButton">
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="ButtonRounded.Dark" parent="ButtonRounded">
+        <item name="android:backgroundTint">@color/grey_dark</item>
     </style>
 </resources>
