--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="model"
-            type="com.denisbovsunivskyi.animetier.presentation.model.auth.SignUpModel" />
+            type="com.denisbovsunivskyi.animetier.presentation.model.auth.SignInModel" />
     </data>
 
 
@@ -22,13 +22,24 @@
             android:animateLayoutChanges="true"
             android:orientation="vertical">
 
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:visibility="invisible"
+                android:id="@+id/welcome_img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/ic_welcome_image"
+                app:srcCompat="@drawable/ic_welcome_image" />
+
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/title"
                 style="@style/Text.H1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="56dp"
+                android:layout_marginTop="20dp"
                 android:text="@string/text_welcome"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -43,17 +54,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/title" />
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/welcome_img"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                app:srcCompat="@drawable/ic_welcome_image"
-                android:src="@drawable/ic_welcome_image"
-         />
-
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/input_email"
@@ -120,19 +120,22 @@
                 android:textAppearance="@style/Text.H5.Light" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/register_btn"
+                android:id="@+id/login_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="48dp"
-                android:layout_marginTop="60dp"
-                android:layout_marginBottom="75dp"
-                android:backgroundTint="@color/grey_dark"
-                android:enabled="false"
+                android:layout_marginBottom="20dp"
+                app:backgroundTint="@null"
+                style="@style/Text.H5.Dark"
+                android:textAllCaps="false"
+                android:backgroundTint="@color/primary"
+                android:enabled="true"
                 android:paddingVertical="10dp"
                 android:text="@string/text_continue"
-                android:textAppearance="@style/Text.H5.White"
-                app:cornerRadius="20dp" />
+                app:cornerRadius="20dp"
+
+               />
         </androidx.appcompat.widget.LinearLayoutCompat>
     </ScrollView>
 </layout>
