--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -4,10 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/loginFragment">
-
+    <activity
+        android:id="@+id/mainActivity"
+        android:name="com.denisbovsunivskyi.animetier.presentation.ui.MainActivity"
+        android:label="mainActivity"
+        tools:layout="@layout/activity_main" />
+    <action
+        android:id="@+id/action_global_auth"
+        app:destination="@id/loginFragment"
+        app:popUpTo="@id/nav_graph"
+        app:popUpToInclusive="true" />
+    <action
+        android:id="@+id/action_global_home_list"
+        app:destination="@id/homeList"
+        app:popUpTo="@id/nav_graph"
+        app:popUpToInclusive="true" />
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.denisbovsunivskyi.animetier.presentation.ui.LoginFragment"
+        android:name="com.denisbovsunivskyi.animetier.presentation.ui.fragments.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
@@ -15,14 +29,28 @@
             app:destination="@id/registrationFragment"
             app:enterAnim="@anim/slide_in_anim"
             app:popExitAnim="@anim/slide_out_anim" />
+        <action
+            android:id="@+id/action_loginFragment_to_homeFragment"
+            app:destination="@id/homeList"
+            app:enterAnim="@anim/slide_in_anim"
+            app:popExitAnim="@anim/slide_out_anim"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/registrationFragment"
-        android:name="com.denisbovsunivskyi.animetier.presentation.ui.RegistrationFragment"
+        android:name="com.denisbovsunivskyi.animetier.presentation.ui.fragments.RegistrationFragment"
         android:label="fragment_registration"
         tools:layout="@layout/fragment_registration" >
         <action
             android:id="@+id/action_registrationFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/homeList"
+        android:name="com.denisbovsunivskyi.animetier.presentation.ui.fragments.HomeList"
+        android:label="fragment_home_list"
+        tools:layout="@layout/fragment_home_list" >
+
     </fragment>
 </navigation>
