--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,7 +18,10 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/grey</item>
     </style>
-
+    <style name="Text.H5.Dark">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/grey_dark</item>
+    </style>
     <style name="Text.H5.White">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/white</item>
