--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -72,6 +72,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/text_email"
+                    android:imeOptions="actionNext"
                     android:inputType="textEmailAddress"
                     android:lines="1"
                     android:text="@={model.email}" />
@@ -85,6 +86,7 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:passwordToggleEnabled="true"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/card_number_label">
 
@@ -126,15 +128,13 @@
                 android:layout_gravity="center"
                 android:layout_marginHorizontal="48dp"
                 android:layout_marginBottom="20dp"
-                app:backgroundTint="@null"
-                style="@style/Text.H5.Dark"
+                style="@style/Text.H5"
+                android:textColor="@color/selector_text_btn_color"
                 android:textAllCaps="false"
-                android:backgroundTint="@color/primary"
-                android:enabled="true"
+                android:backgroundTint="@color/selector_background_btn_color"
                 android:paddingVertical="10dp"
                 android:text="@string/text_continue"
                 app:cornerRadius="20dp"
-
                />
         </androidx.appcompat.widget.LinearLayoutCompat>
     </ScrollView>
