--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/loginFragment">
+    app:startDestination="@id/registrationProfileInfoFragment">
     <activity
         android:id="@+id/mainActivity"
         android:name="com.denisbovsunivskyi.animetier.presentation.ui.MainActivity"
@@ -21,7 +21,7 @@
         app:popUpToInclusive="true" />
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.denisbovsunivskyi.animetier.presentation.ui.fragments.LoginFragment"
+        android:name="com.denisbovsunivskyi.animetier.presentation.ui.fragments.auth.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
@@ -39,18 +39,27 @@
     </fragment>
     <fragment
         android:id="@+id/registrationFragment"
-        android:name="com.denisbovsunivskyi.animetier.presentation.ui.fragments.RegistrationFragment"
+        android:name="com.denisbovsunivskyi.animetier.presentation.ui.fragments.auth.RegistrationFragment"
         android:label="fragment_registration"
         tools:layout="@layout/fragment_registration" >
         <action
             android:id="@+id/action_registrationFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_registrationFragment_to_registrationProfileInfoFragment"
+            app:destination="@id/registrationProfileInfoFragment"
+            app:enterAnim="@anim/slide_in_anim"
+            app:popExitAnim="@anim/slide_out_anim" />
     </fragment>
     <fragment
         android:id="@+id/homeList"
         android:name="com.denisbovsunivskyi.animetier.presentation.ui.fragments.HomeList"
         android:label="fragment_home_list"
         tools:layout="@layout/fragment_home_list" >
-
     </fragment>
+    <fragment
+        android:id="@+id/registrationProfileInfoFragment"
+        android:name="com.denisbovsunivskyi.animetier.presentation.ui.fragments.auth.RegistrationProfileInfoFragment"
+        android:label="fragment_registration_profile_info"
+        tools:layout="@layout/fragment_registration_profile_info" />
 </navigation>
