--- a/app/src/main/res/layout/fragment_registration_profile_info.xml
+++ b/app/src/main/res/layout/fragment_registration_profile_info.xml
@@ -28,6 +28,17 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/registration_background" />
 
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="@string/text_fill_your_profile"
+                android:textAppearance="@style/Text.H1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/profile_image"
                 android:layout_width="120dp"
@@ -36,7 +47,7 @@
                 android:background="@drawable/bg_round_image_view"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/title"
                 app:srcCompat="@drawable/ic_registration_icon" />
 
             <androidx.appcompat.widget.AppCompatImageView
@@ -64,6 +75,7 @@
                     android:hint="@string/text_nickname"
                     android:imeOptions="actionNext"
                     android:inputType="text|textNoSuggestions"
+                    android:maxLength="16"
                     android:text="@={model.nickname}" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -77,7 +89,7 @@
                 app:layout_constraintTop_toBottomOf="@id/input_nick_name">
 
                 <com.denisbovsunivskyi.animetier.presentation.utils.edittext.ClearFocusEditText
-                    android:id="@+id/edit_password"
+                    android:id="@+id/edit_about"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="top"
@@ -85,9 +97,10 @@
                     android:imeOptions="actionDone"
                     android:inputType="textMultiLine"
                     android:maxLength="255"
-                    android:minHeight="200dp"
+                    android:maxHeight="200dp"
                     android:singleLine="false"
                     android:text="@={model.about}"
+                    android:textColor="@color/grey"
                     android:textColorHint="@color/grey" />
             </com.google.android.material.textfield.TextInputLayout>
 
