--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,21 +10,41 @@
         <item name="android:textSize">36sp</item>
     </style>
 
+    <style name="Text.H3">
+        <item name="android:textSize">24sp</item>
+    </style>
+    <style name="Text.H4">
+        <item name="android:textSize">18sp</item>
+    </style>
+    <style name="Text.H4.White">
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="Text.H4.White.Bold">
+        <item name="android:textStyle">bold</item>
+    </style>
     <style name="Text.H5">
         <item name="android:textSize">16sp</item>
     </style>
-
     <style name="Text.H5.Light">
-        <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/grey</item>
     </style>
     <style name="Text.H5.Dark">
-        <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/grey_dark</item>
     </style>
     <style name="Text.H5.White">
-        <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="Text.H5.White.Bold">
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="Text.H6">
+        <item name="android:textSize">12sp</item>
+    </style>
+    <style name="Text.H6.White">
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="Text.H6.White.Bold">
+        <item name="android:textStyle">bold</item>
     </style>
     <!--EditText-->
     <style name="TextInputLayout" parent="Widget.Material3.TextInputLayout.FilledBox">
@@ -132,5 +152,10 @@
         <!-- Customize your theme here. -->
         <item name="android:statusBarColor">@color/white</item>
         <item name="android:windowLightStatusBar">true</item>
+    </style>
+
+    <style name="roundedCornersImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">16dp</item>
     </style>
 </resources>
